--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
 //oi
+    testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
+
 }
 
 test {
