Criou menu da calculadora no metodo main, a chamada da função somarDoisNumeros e o seu respectivo teste unitario

--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,10 @@ repositories {
 }
 
 dependencies {
-//oi
     testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
 
 }
 
-test {
-    useJUnitPlatform()
+test{
+    useTestNG()
 }
